--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "serverless offline",
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "powershell -ExecutionPolicy Bypass -File ./script.ps1"
   },
   "keywords": [],
   "author": "",
