--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,10 @@ frameworkVersion: "4"
 provider:
   name: aws
   runtime: nodejs18.x
+  region: us-east-1
+  environment:
+    STAGE: ${param:stage}
+    REGION: us-east-1
 
 plugins:
   - serverless-offline
