--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "serverless offline",
+    "dev": "serverless offline --param='stage=dev' --verbose",
     "build": "tsc",
-    "deploy": "powershell -ExecutionPolicy Bypass -File ./script.ps1"
+    "deploy": "powershell -ExecutionPolicy Bypass -File ./script.ps1",
+    "test": "jest test --no-cache --coverage --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,10 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.146",
+    "@types/jest": "29.5.14",
     "@types/node": "22.10.1",
+    "jest": "29.7.0",
+    "ts-jest": "29.2.5",
     "typescript": "5.7.2"
   }
 }
