--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "serverless-typescript-template",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "dev": "serverless offline --param='stage=dev' --verbose",
+    "dev": "serverless offline --param='stage=dev' --param='region=us-east-1' --verbose",
     "build": "tsc",
-    "deploy": "powershell -ExecutionPolicy Bypass -File ./script.ps1",
     "test": "jest test --no-cache --coverage --runInBand"
   },
   "keywords": [],
-  "author": "",
+  "author": "jemgdev",
   "license": "MIT",
   "description": "",
-  "dependencies": {
-    "aws-lambda": "1.0.7",
-    "serverless-offline": "14.3.4"
-  },
   "devDependencies": {
-    "@types/aws-lambda": "8.10.146",
+    "@types/aws-lambda": "8.10.149",
     "@types/jest": "29.5.14",
-    "@types/node": "22.10.1",
     "jest": "29.7.0",
+    "serverless-offline": "14.4.0",
     "ts-jest": "29.2.5",
     "typescript": "5.7.2"
   }
