--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "outDir": "./build",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "noEmit": true
   },
-  "include": ["src/**/*.ts", "test/infrastructure/driven/repository/user/user.memory.repository.test.ts"],
-  "exclude": ["node_modules", "build"]
+  "include": ["src/**/*.ts", "test/**/*.test.ts"],
+  "exclude": ["node_modules", "dist"]
 }
