--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "scripts": {
     "dev": "serverless offline --param='stage=dev' --param='region=us-east-1' --verbose",
     "build": "tsc",
-    "test": "jest test --no-cache --coverage --runInBand"
+    "test": "jest test --no-cache --coverage --runInBand",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix"
   },
   "keywords": [],
   "author": "jemgdev",
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "9.26.0",
     "@types/aws-lambda": "8.10.149",
     "@types/jest": "29.5.14",
+    "eslint-plugin-jest": "28.11.0",
+    "globals": "16.1.0",
     "jest": "29.7.0",
     "serverless-offline": "14.4.0",
     "ts-jest": "29.2.5",
-    "typescript": "5.7.2"
+    "ts-node": "10.9.2",
+    "typescript": "5.7.2",
+    "typescript-eslint": "8.32.0"
   }
 }
