--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
-service: serverless-typescript-template
+service: ${param:stage}-serverless-typescript-template
 frameworkVersion: "4"
 
 provider:
   name: aws
-  runtime: nodejs18.x
+  runtime: nodejs16.x
   region: ${param:region}
   environment:
     STAGE: ${param:stage}
