--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "removeComments": true,
     "module": "CommonJS",
+    "declaration": true,
     "outDir": "./dist",
-    "strict": true,
-    "esModuleInterop": true,
-    "noEmit": true
+    "strict": false,
+    "target": "ES5",
+    "sourceMap": false,
+    "baseUrl": "./",
+    "paths": {
+      "@": ["src"],
+      "@*": ["src/*"]
+    }
   },
   "include": ["src/**/*.ts", "test/**/*.test.ts"],
   "exclude": ["node_modules", "dist"]
