--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "jest test --no-cache --coverage --runInBand",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix",
+    "lint:fix": "eslint . --fix",
     "deploy": "serverless deploy --param='stage=dev' --param='region=us-east-1' --verbose"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@eslint/js": "9.26.0",
     "@types/aws-lambda": "8.10.149",
     "@types/jest": "29.5.14",
+    "eslint": "9.26.0",
     "eslint-plugin-jest": "28.11.0",
     "globals": "16.1.0",
     "jest": "29.7.0",
