--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,19 @@
     "removeComments": true,
     "module": "CommonJS",
     "declaration": true,
-    "outDir": "./dist",
     "strict": false,
     "target": "ES5",
     "sourceMap": false,
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "outDir": "./dist",
     "paths": {
-      "@": ["src"],
-      "@*": ["src/*"]
+      "@domain": ["domain/*"],
+      "@infrastructure": ["infrastructure/*"],
+      "@usecases": ["usecases/*"],
+      "@utils": ["utils/*"],
+      "@*": ["*"]
     }
   },
-  "include": ["src/**/*.ts", "test/**/*.test.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "test"]
 }
