--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "jemgdev",
   "license": "MIT",
   "description": "",
+  "dependencies": {
+    "loggerfy": "1.0.1"
+  },
   "devDependencies": {
     "@eslint/js": "9.26.0",
     "@types/aws-lambda": "8.10.149",
