--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,9 @@
 service: serverless-typescript-template
-frameworkVersion: "4"
+frameworkVersion: '4'
 
 provider:
   name: aws
-  runtime: nodejs16.x
+  runtime: nodejs22.x
   region: ${param:region}
   environment:
     STAGE: ${param:stage}
@@ -14,12 +14,22 @@ plugins:
 
 package:
   exclude:
+    - .github
+    - .serverless
+    - coverage
     - src/**/*.ts
     - test
+    - .gitignore
+    - eslint.config.js
+    - jest.config.js
+    - LICENSE
+    - README.md
+    - serverless.yml
+    - tsconfig.json
 
 functions:
   get-users:
-    handler: dist/src/infrastructure/handlers/get-users.handler
+    handler: dist/handlers/get-users.handler
     events:
       - http:
           path: get-users
