--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest test --no-cache --coverage --runInBand",
     "format": "npx prettier . --check --write",
     "lint": "eslint .",
-    "deploy": "serverless deploy --param='stage=dev' --param='region=us-east-1' --verbose"
+    "deploy": "tsc && serverless deploy --param='stage=dev' --param='region=us-east-1' --verbose"
   },
   "keywords": [],
   "author": "jemgdev",
@@ -25,11 +25,11 @@
     "eslint-plugin-jest": "28.11.0",
     "globals": "16.1.0",
     "jest": "29.7.0",
+    "prettier": "3.5.3",
     "serverless-offline": "14.4.0",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.2",
-    "typescript-eslint": "8.32.0",
-    "prettier": "3.5.3"
+    "typescript-eslint": "8.32.0"
   }
 }
