--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ package:
     - .github
     - .serverless
     - coverage
-    - src/**/*.ts
+    - src
     - test
     - .gitignore
     - eslint.config.js
@@ -25,6 +25,7 @@ package:
     - LICENSE
     - README.md
     - serverless.yml
+    - serverless.offline.yml
     - tsconfig.json
 
 functions:
