--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,9 @@
     "strict": true,
     "target": "ES2024",
     "sourceMap": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "outDir": "./dist",
-    "paths": {
-      "@": ["src"],
-      "@*": ["src/*"]
-    }
   },
-  "include": ["src/**/*", "test/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "test"]
 }
