--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "target": "ES2024",
     "sourceMap": true,
     "baseUrl": "./src",
-    "outDir": "./dist",
+    "outDir": "./dist"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test"]
