--- a/serverless.yml
+++ b/serverless.yml
@@ -33,5 +33,5 @@ functions:
     handler: dist/handlers/get-users-http.handler
     events:
       - http:
-          path: get-users
+          path: /v1/users
           method: get
