feat: improve CI/CD pipeline

--- a/.github/workflows/deploy-on-prod.yml
+++ b/.github/workflows/deploy-on-prod.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    environment: prod
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,5 +33,5 @@ jobs:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_TOKEN }}
         run: |
           serverless deploy --verbose \
-            --param="stage=${{ secrets.STAGE }}" \
-            --param="region=${{ secrets.REGION }}"
+            --stage ${{ secrets.STAGE }} \
+            --region ${{ secrets.REGION }}
