--- a/.github/workflows/test-on-pr-and-deploy-on-develop.yml
+++ b/.github/workflows/test-on-pr-and-deploy-on-develop.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Run tests
         run: npm run test
   deploy:
+    needs: test
     environment: dev
     runs-on: ubuntu-latest
     steps:
