Actualizar tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "target": "ES2024",
     "sourceMap": true,
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
