--- a/package.json
+++ b/package.json
@@ -3,33 +3,30 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "serverless offline --config serverless.offline.yml --param='stage=dev' --param='region=us-east-1'",
+    "dev": "serverless offline --stage dev --region us-east-1",
     "build": "tsc",
     "test": "jest test --no-cache --coverage --runInBand",
-    "format": "npx prettier . --check --write",
-    "lint": "eslint .",
-    "deploy": "tsc && serverless deploy --param='stage=dev' --param='region=us-east-1' --verbose"
+    "lint": "standard --parser @typescript-eslint/parser --plugin @typescript-eslint/eslint-plugin 'src/**/*.ts'",
+    "lint:fix": "npm run lint -- --fix",
+    "deploy": "tsc && serverless deploy --stage dev --region us-east-1 --verbose"
   },
   "keywords": [],
   "author": "jemgdev",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "loggerfy": "1.0.1"
+    "loggerfy": "1.1.4"
   },
   "devDependencies": {
-    "@eslint/js": "9.26.0",
-    "@types/aws-lambda": "8.10.149",
-    "@types/jest": "29.5.14",
-    "eslint": "9.26.0",
-    "eslint-plugin-jest": "28.11.0",
-    "globals": "16.1.0",
-    "jest": "29.7.0",
-    "prettier": "3.5.3",
+    "@types/aws-lambda": "8.10.152",
+    "@types/jest": "30.0.0",
+    "globals": "16.3.0",
+    "jest": "30.0.5",
     "serverless-offline": "14.4.0",
-    "ts-jest": "29.2.5",
+    "standard": "^17.1.2",
+    "ts-jest": "^29.4.1",
     "ts-node": "10.9.2",
-    "typescript": "5.7.2",
-    "typescript-eslint": "8.32.0"
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0"
   }
 }
