--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
     "target": "ES2024",
     "sourceMap": true,
     "baseUrl": "./",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "test"]
 }
