--- a/.github/workflows/test-on-pr-and-deploy-on-develop.yml
+++ b/.github/workflows/test-on-pr-and-deploy-on-develop.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm ci --only=production
+        run: npm install
       - name: Build the project
         run: npm run build
       - name: Install Serverless Framework
