--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "removeComments": true,
-    "module": "CommonJS",
+    "module": "commonjs",
     "declaration": true,
     "strict": true,
-    "target": "ES2024",
+    "target": "ES2022",
     "sourceMap": true,
     "baseUrl": "./",
     "outDir": "./dist",
