--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
     "@types/jest": "30.0.0",
+    "eslint": "^8.57.1",
     "jest": "30.0.5",
     "serverless-offline": "14.4.0",
     "ts-jest": "^29.4.1",
