--- a/.github/workflows/deploy-on-prod.yml
+++ b/.github/workflows/deploy-on-prod.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm install --only=production
+        run: npm install
       - name: Build the project
         run: npm run build
       - name: Install Serverless Framework
