--- a/.github/workflows/deploy-on-prod.yml
+++ b/.github/workflows/deploy-on-prod.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Build the project
         run: npm run build
       - name: Install Serverless Framework
-        run: npm install -g serverless
+        run: npm install -g serverless@3
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
