--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: serverless-typescript-template
-frameworkVersion: "3"
+frameworkVersion: "4"
 
 provider:
   name: aws
@@ -56,7 +56,7 @@ resources:
 
 functions:
   get-users:
-    handler: dist/handlers/get-users-http.handler
+    handler: dist/user/infrastructure/driving/handlers/http/GetUsersHttp.handler
     role: GetUsersRole
     timeout: 29
     memorySize: 128
@@ -65,3 +65,13 @@ functions:
       - http:
           path: /api/v1/users
           method: get
+  create-user:
+    handler: dist/user/infrastructure/driving/handlers/http/CreateUserHttp.handler
+    role: GetUsersRole
+    timeout: 29
+    memorySize: 128
+    description: Get users from the database
+    events:
+      - http:
+          path: /api/v1/users
+          method: post
