--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,15 @@
     "strict": true,
     "target": "ES2022",
     "sourceMap": true,
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "paths": {
+      "@user/domain/*": ["user/domain/*"],
+      "@user/application/*": ["user/application/*"],
+      "@user/infrastructure/*": ["user/infrastructure/*"],
+      "@shared/*": ["shared/*"]
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "test"]
