--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "description": "A serverless typescript template",
   "dependencies": {
     "loggerfy": "1.1.4",
-    "zod": "^4.0.17"
+    "zod": "4.0.17"
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
     "@types/jest": "30.0.0",
-    "@types/node": "24.2.1",
-    "eslint": "8.57.1",
+    "@types/node": "24.3.0",
+    "eslint": "9.33.0",
     "jest": "30.0.5",
     "serverless-offline": "14.4.0",
     "ts-jest": "29.4.1",
@@ -30,7 +30,7 @@
     "ts-standard": "12.0.2",
     "tsc-alias": "1.8.16",
     "typescript": "5.9.2",
-    "typescript-eslint": "8.39.0"
+    "typescript-eslint": "8.40.0"
   },
   "ts-standard": {
     "project": "./tsconfig.json",
