--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
       "@user/application/*": ["user/application/*"],
       "@user/usecases/*": ["user/application/usecases/*"],
       "@user/ports/*": ["user/application/ports/*"],
-      "@user/mappers/*": ["user/application/mappers/*"],
-      "@user/dtos/*": ["user/application/dtos/*"],
+      
+      
       "@user/infrastructure/*": ["user/infrastructure/*"],
       "@user/driven/*": ["user/infrastructure/driven/*"],
       "@user/driving/*": ["user/infrastructure/driving/*"],
@@ -36,5 +36,5 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "test"]
+  "exclude": ["node_modules", "test", "**/*.test.ts"]
 }
