--- a/.github/workflows/test-on-pr-and-deploy-on-develop.yml
+++ b/.github/workflows/test-on-pr-and-deploy-on-develop.yml
@@ -19,6 +19,8 @@ jobs:
         run: npm i
       - name: Run tests
         run: npm run test
+        env:
+          NODE_PATH: ./:src
   deploy:
     needs: test
     environment: dev
