--- a/.github/workflows/test-on-pr-and-deploy-on-develop.yml
+++ b/.github/workflows/test-on-pr-and-deploy-on-develop.yml
@@ -16,11 +16,9 @@ jobs:
         with:
           node-version: 22
       - name: Install dependencies
-        run: npm i
+        run: npm install
       - name: Run tests
         run: npm run test
-        env:
-          NODE_PATH: ./:src
   deploy:
     needs: test
     environment: dev
